@@ -10,6 +10,7 @@
 
 
 Version 4.1.5
+ - Fixed: FACT/TYPE not being checked for privacy rules when editing raw gedcom (fisharebest)
  - Fixed: [ 1933760 ] SVN 2799 use of function id_type (fisharebest)
  - Fixed: Remove dependencies on record prefixes (fisharebest)
  - Fixed: Extra checks against reusing record IDs (fisharebest)
